--- a/Front_end/src/css/mobile.css
+++ b/Front_end/src/css/mobile.css
@@ -151,7 +151,7 @@
         padding:5px 5px;
         margin-bottom: 1em;
         .car-img{
-            border-radius:inherit ;
+            border-radius:15px ;
         }
         .title{
             display: flex;
@@ -273,6 +273,29 @@
             
         }
 
+    }
+    #img-error{
+        width: 100%;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: rgba(0, 0, 0, 0.897);
+        border-radius:15px ;
+        .icon{
+            font-size: 4rem;
+            color: yellow;
+            stroke-width: .8;
+            
+        }
+        p{
+            font-family: "Source Code Pro", 'Courier New', Courier, monospace;
+            text-align: center;
+            font-size: .9rem;
+            opacity: .5;
+            margin-top: -4em;
+        }
     }
 
 }
