--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @media (max-width: 600px) {
-
-
     a {
         text-decoration: none;
         color: inherit;
@@ -34,7 +32,7 @@
         align-items: center;
         padding: .5em 1em;
         backdrop-filter: blur(5px) saturate(1.5);
-        transition: all .5s ease-in-out;
+        transition: all .3s ease-in-out;
     }
     
     #logo-container {
@@ -373,6 +371,31 @@
         }
 
     }
+   
+    #favorites-container{
+        margin-top: 7rem;
+        height: calc(100vh - 3rem);
+        width: 100%;
+        padding: 0 2rem 0 2rem;
+
+        .head {
+            font-size: 1.2rem;
+            color: aliceblue;
+            margin-bottom: 5px;
+        }
+
+        .loaded::after{
+            margin-top: 5px;
+            content: ' ';
+            display: block;
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 0%;
+            height: 2px;
+            animation: line-animation 1s ease-in-out forwards;
+            margin-bottom: 15px;}
+    }
     #img-error{
         width: 100%;
         height: 200px;
@@ -394,6 +417,57 @@
             font-size: .9rem;
             opacity: .5;
             margin-top: -4em;
+        }
+    }
+
+    #no-favorites{
+        width: 100%;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: rgba(0, 0, 0, 0.897);
+        border-radius:15px ;
+        .icon{
+            font-size: 4rem;
+            color: yellow;
+            
+        }
+        p{
+            padding-top: 2rem;
+            font-family: "Source Code Pro", 'Courier New', Courier, monospace;
+            text-align: center;
+            font-size: 1rem;
+            margin-top: -4em;
+            color: white;
+        }
+    }
+
+    #return-btn{
+        margin-top: 1em;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: yellow;
+        font-size: 1rem;
+        font-weight: 600;
+        color: black;
+        border: none;
+        padding: .5em 1em;
+        border-radius: 10px;
+        transition: all .5s ease-in-out;
+        .icon{
+            margin-bottom: -3px;
+            margin-inline: 0 5px;
+        }
+    }
+    #return-btn:active {
+        background-color: white;
+        color: black;
+        transition: all .4s  cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        .icon{
+            fill: yellow;
         }
     }
 
