--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -134,17 +134,19 @@
                     font-size: 1.8rem;
                     color: yellow;
                     text-decoration:none;
-                    
-                    
-                    
-                    
                 }
+           
             
             
             
             }
             
-
+            .link-active{
+                .link-text{
+                color: yellow;
+                }
+            }
+           
         }
 
 
@@ -152,7 +154,9 @@
         .menu-active{
             transform: translateX(0%);
             transition: all .3s ease-out;
+            
         }
+        
     }
 
     #header-container {
@@ -250,6 +254,7 @@
         .car-img{
             border-radius:15px ;
         }
+        
         .title{
             display: flex;
             align-items: baseline;
@@ -427,7 +432,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-        background-color: rgba(0, 0, 0, 0.897);
+        box-shadow: -2px -2px 10px #5050502d,2px 2px 10px #5050502d ;
+        background-color: rgba(0, 0, 0, 0.7);
         border-radius:15px ;
         .icon{
             font-size: 4rem;
@@ -471,6 +477,10 @@
         }
     }
 
+    #all-cars-container{
+        margin: auto;
+        margin-top: calc(4rem + 4px);
+    }
 }
 
 @keyframes line-animation {
